fix crash in wxWindowGTK::GTKHandleUnrealize(), closes #14752

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72691 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775